@@ -2,6 +2,8 @@
 # HISTORY
 ###############################################################################
 
+Set::ArrayAlt
+
 Version 1.00  2009-04-14
    Originally, all functionality was in Template::Plugins::ListOps.
       Moved it here and made that module a wrapper around this one
@@ -15,3 +17,6 @@ Version 1.01  2010-02-05
    Added is_subset/not_subset methods.
 
 Version 1.02
+   Renamed the module to Array::AsObject . 1.02 is the final version
+   of Set::ArrayAlt .
+
